--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 window.config = {
   organization: false,
   order: 'UPDATED_AT',
-  title: 'Blog',
+  title: '有安科技-官方博客',
   user: 'Safe3',
   repository: 'blog',
   authors: 'Safe3',
-  ignores: '17,13',
-  hash: 'abATFfaabCATWTcbAAOabCPfCcbAcaXWcAXCbdCeYmxvZy51dXNlYy5jb20=',
+  hash: 'ghp_nlFuPeJcGZpaWDDWGFKLUtTEeGrluGAjJyEwd3d3LnV1c2VjLmNvbQ==',
   perpage: 10,
 }
 </script>
