--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ window.config = {
   user: 'Safe3',
   repository: 'blog',
   authors: 'Safe3',
+  host: 'www.uusec.com',
   hash: 'ghp_nlFuPeJcGZpaWDDWGFKLUtTEeGrluGAjJyEwd3d3LnV1c2VjLmNvbQ==',
   perpage: 10,
 }
