--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@ window.config = {
   user: 'Safe3',
   repository: 'blog',
   authors: 'Safe3',
-  host: 'www.uusec.com',
-  hash: 'ghp_nlFuPeJcGZpaWDDWGFKLUtTEeGrluGAjJyEwd3d3LnV1c2VjLmNvbQ==',
+  hash: 'ghp_nlFuPeJcGZpaWDDWGFKLUtTEeGrluG!jJyEwYmxvZy51dXNlYy5jb20=',
   perpage: 10,
 }
 </script>
